--- a/src/assets/styles/roadmap.module.css
+++ b/src/assets/styles/roadmap.module.css
@@ -208,7 +208,7 @@ ul.timeline-body li.active .timeline-item-title {
   }
   .roadMap-sm-title-text {
     font-size: 24px;
-    width: 200px;
+    width: 210px;
     font-weight: 700;
     text-align: left;
   }
